i386-any-linux/parse_tdf.output
Grammar

    0 $accept: start $end

    1 start: operators_opt

    2 operators_opt: operators
    3              | /* empty */

    4 operators: operators operator
    5          | operator

    6 @1: /* empty */

    7 operator: type_opt opSignature @1 operatorBody exception_opt

    8 type_opt: type
    9         | /* empty */

   10 type: BOOLEAN
   11     | FLOAT
   12     | DOUBLE
   13     | BOOLEAN arraySize
   14     | sizedType '[' expr ']'
   15     | sizedType arraySize '[' expr ']'

   16 sizedType: SIGNED
   17          | UNSIGNED

   18 arraySize: '[' expr ']'

   19 opSignature: ID_ '(' ioDecls_opt ')'

   20 ioDecls_opt: ioDecls
   21            | /* empty */

   22 ioDecls: ioDecls ',' ioDecl
   23        | ioDecl

   24 ioDecl: ioKind type ID_

   25 ioKind: INPUT
   26       | OUTPUT
   27       | PARAM

   28 exception_opt: exception
   29              | /* empty */

   30 exception: PASS_THROUGH_EXCEPTION

   31 @2: /* empty */

   32 operatorBody: '{' typeDecls_opt @2 states '}'

   33 @3: /* empty */

   34 operatorBody: '{' typeDecls_opt @3 callsOrAssigns '}'
   35             | '{' typeDecls_opt '}'

   36 typeDecls_opt: typeDecls
   37              | /* empty */

   38 typeDecls: typeDecls typeDecl

   39 @4: /* empty */

   40 typeDecls: @4 typeDecl

   41 typeDecl: type typeDeclElems ';'
   42         | ';'

   43 typeDeclElems: typeDeclElem
   44              | typeDeclElems ',' typeDeclElem

   45 typeDeclElem: ID_

   46 @5: /* empty */

   47 typeDeclElem: ID_ @5 '=' expr

   48 @6: /* empty */

   49 typeDeclElem: ID_ @6 '(' expr ')'

   50 callsOrAssigns: callsOrAssigns callOrAssign
   51               | callOrAssign_nonEmpty

   52 callOrAssign: callOrAssign_nonEmpty
   53             | ';'

   54 callOrAssign_nonEmpty: call ';'
   55                      | lvalue '=' call ';'
   56                      | lvalue '=' lvalue ';'
   57                      | builtinStmtCompose ';'

   58 states: states stateCase
   59       | stateCase

   60 stateCase: STATE ID_ '(' stateVars_opt ')' ':' stmts_opt

   61 stateVars_opt: stateVars
   62              | /* empty */

   63 stateVars: stateVars ',' stateVar
   64          | stateVar

   65 stateVar: ID_
   66         | ID_ '#' expr
   67         | EOS '(' ID_ ')'
   68         | EOFR '(' ID_ ')'

   69 stmts_opt: stmts
   70          | /* empty */

   71 stmts: stmts stmt
   72      | stmt_nonEmpty

   73 stmt: stmt_nonEmpty
   74     | ';'

   75 stmt_nonEmpty: matchedStmt
   76              | unmatchedStmt

   77 matchedStmt: IF '(' expr ')' matchedStmt ELSE matchedStmt
   78            | GOTO ID_ ';'
   79            | STAY ';'
   80            | assign ';'
   81            | builtinStmtBehav ';'
   82            | call ';'
   83            | stmtBlock

   84 unmatchedStmt: IF '(' expr ')' stmt
   85              | IF '(' expr ')' matchedStmt ELSE unmatchedStmt

   86 stmtBlock: '{' typeDecls_opt stmts_opt '}'

   87 builtinStmtBehav: ATTENTION '(' expr ')'
   88                 | CLOSE '(' ID_ ')'
   89                 | FRAMECLOSE '(' ID_ ')'
   90                 | DONE '(' ')'
   91                 | PRINTF '(' STRING more_args_opt ')'
   92                 | copyStmt
   93                 | segmentStmt

   94 builtinStmtCompose: copyStmt
   95                   | segmentStmt

   96 copyStmt: COPY '(' args ')'

   97 segmentStmt: SEGMENT_R_ '(' args ')'
   98            | SEGMENT_W_ '(' args ')'
   99            | SEGMENT_RW_ '(' args ')'
  100            | SEGMENT_SEQ_R_ '(' args ')'
  101            | SEGMENT_SEQ_W_ '(' args ')'
  102            | SEGMENT_SEQ_RW_ '(' args ')'

  103 call: ID_ '(' args_opt ')'

  104 args_opt: args
  105         | /* empty */

  106 more_args_opt: ',' args
  107              | /* empty */

  108 args: args ',' expr
  109     | expr

  110 assign: lvalue '=' expr

  111 lvalue: ID_
  112       | ID_ '[' expr ']'
  113       | ID_ '[' expr ':' expr ']'
  114       | ID_ '[' expr ']' '[' expr ']'
  115       | ID_ '[' expr ']' '[' expr ':' expr ']'

  116 expr: condExpr
  117     | '{' condExprs_opt '}'

  118 condExprs_opt: condExprs
  119              | /* empty */

  120 condExprs: condExprs ',' condExpr
  121          | condExpr

  122 condExpr: logOrExpr '?' condExpr ':' condExpr
  123         | logOrExpr

  124 logOrExpr: logOrExpr LOGIC_OR logAndExpr
  125          | logAndExpr

  126 logAndExpr: logAndExpr LOGIC_AND bitOrExpr
  127           | bitOrExpr

  128 bitOrExpr: bitOrExpr '|' bitXorExpr
  129          | bitXorExpr

  130 bitXorExpr: bitXorExpr '^' bitAndExpr
  131           | bitAndExpr

  132 bitAndExpr: bitAndExpr '&' equalExpr
  133           | equalExpr

  134 equalExpr: equalExpr equalOp inequalExpr
  135          | inequalExpr

  136 inequalExpr: inequalExpr inequalOp shiftExpr
  137            | shiftExpr

  138 shiftExpr: shiftExpr shiftOp addExpr
  139          | addExpr

  140 addExpr: addExpr addOp prodExpr
  141        | prodExpr

  142 prodExpr: prodExpr prodOp unaryExpr
  143         | unaryExpr

  144 unaryExpr: unaryOp fixedExpr
  145          | exprOp '(' expr ')'
  146          | logOp '(' expr ')'
  147          | sqrtOp '(' expr ')'
  148          | floorOp '(' expr ')'
  149          | '(' type ')' fixedExpr
  150          | '(' sizedType ')' fixedExpr
  151          | floatExpr

  152 floatExpr: fixedExpr

  153 fixedExpr: atomExpr '.' atomExpr
  154          | atomExpr

  155 atomExpr: lvalue
  156         | lvalue '@' atomExpr
  157         | NUM
  158         | NUMDBL
  159         | TRUE
  160         | FALSE
  161         | call
  162         | builtinExpr
  163         | '(' expr ')'

  164 builtinExpr: CAT '(' args ')'
  165            | WIDTHOF '(' expr ')'
  166            | BITSOF '(' expr ')'

  167 equalOp: EQUALS
  168        | NOT_EQUALS

  169 inequalOp: '<'
  170          | '>'
  171          | LTE
  172          | GTE

  173 shiftOp: LEFT_SHIFT
  174        | RIGHT_SHIFT

  175 addOp: '+'
  176      | '-'

  177 exprOp: EXP

  178 logOp: LOG

  179 sqrtOp: SQRT

  180 floorOp: FLOOR

  181 prodOp: '*'
  182       | '/'
  183       | '%'

  184 unaryOp: '+'
  185        | '-'
  186        | '!'
  187        | '~'


Terminals, with rules where they appear

$end (0) 0
'!' (33) 186
'#' (35) 66
'%' (37) 183
'&' (38) 132
'(' (40) 19 49 60 67 68 77 84 85 87 88 89 90 91 96 97 98 99 100 101
    102 103 145 146 147 148 149 150 163 164 165 166
')' (41) 19 49 60 67 68 77 84 85 87 88 89 90 91 96 97 98 99 100 101
    102 103 145 146 147 148 149 150 163 164 165 166
'*' (42) 181
'+' (43) 175 184
',' (44) 22 44 63 106 108 120
'-' (45) 176 185
'.' (46) 153
'/' (47) 182
':' (58) 60 113 115 122
';' (59) 41 42 53 54 55 56 57 74 78 79 80 81 82
'<' (60) 169
'=' (61) 47 55 56 110
'>' (62) 170
'?' (63) 122
'@' (64) 156
'[' (91) 14 15 18 112 113 114 115
']' (93) 14 15 18 112 113 114 115
'^' (94) 130
'{' (123) 32 34 35 86 117
'|' (124) 128
'}' (125) 32 34 35 86 117
'~' (126) 187
error (256)
ATTENTION (258) 87
BITSOF (259) 166
BOOLEAN (260) 10 13
FLOAT (261) 11
DOUBLE (262) 12
CAT (263) 164
CLOSE (264) 88
FRAMECLOSE (265) 89
COPY (266) 96
DONE (267) 90
ELSE (268) 77 85
EOS (269) 67
EOFR (270) 68
EQUALS (271) 167
FALSE (272) 160
GOTO (273) 78
GTE (274) 172
ID_ (275) 19 24 45 47 49 60 65 66 67 68 78 88 89 103 111 112 113 114
    115
IF (276) 77 84 85
INPUT (277) 25
LEFT_SHIFT (278) 173
LOGIC_AND (279) 126
LOGIC_OR (280) 124
LTE (281) 171
NOT_EQUALS (282) 168
NUM (283) 157
NUMDBL (284) 158
OUTPUT (285) 26
PARAM (286) 27
PASS_THROUGH_EXCEPTION (287) 30
PRINTF (288) 91
RIGHT_SHIFT (289) 174
SEGMENT_R_ (290) 97
SEGMENT_RW_ (291) 99
SEGMENT_SEQ_R_ (292) 100
SEGMENT_SEQ_RW_ (293) 102
SEGMENT_SEQ_W_ (294) 101
SEGMENT_W_ (295) 98
SIGNED (296) 16
STATE (297) 60
STAY (298) 79
STRING (299) 91
TRUE (300) 159
UNSIGNED (301) 17
WIDTHOF (302) 165
EXP (303) 177
LOG (304) 178
SQRT (305) 179
FLOOR (306) 180


Nonterminals, with rules where they appear

$accept (78)
    on left: 0
start (79)
    on left: 1, on right: 0
operators_opt (80)
    on left: 2 3, on right: 1
operators (81)
    on left: 4 5, on right: 2 4
operator (82)
    on left: 7, on right: 4 5
@1 (83)
    on left: 6, on right: 7
type_opt (84)
    on left: 8 9, on right: 7
type (85)
    on left: 10 11 12 13 14 15, on right: 8 24 41 149
sizedType (86)
    on left: 16 17, on right: 14 15 150
arraySize (87)
    on left: 18, on right: 13 15
opSignature (88)
    on left: 19, on right: 7
ioDecls_opt (89)
    on left: 20 21, on right: 19
ioDecls (90)
    on left: 22 23, on right: 20 22
ioDecl (91)
    on left: 24, on right: 22 23
ioKind (92)
    on left: 25 26 27, on right: 24
exception_opt (93)
    on left: 28 29, on right: 7
exception (94)
    on left: 30, on right: 28
operatorBody (95)
    on left: 32 34 35, on right: 7
@2 (96)
    on left: 31, on right: 32
@3 (97)
    on left: 33, on right: 34
typeDecls_opt (98)
    on left: 36 37, on right: 32 34 35 86
typeDecls (99)
    on left: 38 40, on right: 36 38
@4 (100)
    on left: 39, on right: 40
typeDecl (101)
    on left: 41 42, on right: 38 40
typeDeclElems (102)
    on left: 43 44, on right: 41 44
typeDeclElem (103)
    on left: 45 47 49, on right: 43 44
@5 (104)
    on left: 46, on right: 47
@6 (105)
    on left: 48, on right: 49
callsOrAssigns (106)
    on left: 50 51, on right: 34 50
callOrAssign (107)
    on left: 52 53, on right: 50
callOrAssign_nonEmpty (108)
    on left: 54 55 56 57, on right: 51 52
states (109)
    on left: 58 59, on right: 32 58
stateCase (110)
    on left: 60, on right: 58 59
stateVars_opt (111)
    on left: 61 62, on right: 60
stateVars (112)
    on left: 63 64, on right: 61 63
stateVar (113)
    on left: 65 66 67 68, on right: 63 64
stmts_opt (114)
    on left: 69 70, on right: 60 86
stmts (115)
    on left: 71 72, on right: 69 71
stmt (116)
    on left: 73 74, on right: 71 84
stmt_nonEmpty (117)
    on left: 75 76, on right: 72 73
matchedStmt (118)
    on left: 77 78 79 80 81 82 83, on right: 75 77 85
unmatchedStmt (119)
    on left: 84 85, on right: 76 85
stmtBlock (120)
    on left: 86, on right: 83
builtinStmtBehav (121)
    on left: 87 88 89 90 91 92 93, on right: 81
builtinStmtCompose (122)
    on left: 94 95, on right: 57
copyStmt (123)
    on left: 96, on right: 92 94
segmentStmt (124)
    on left: 97 98 99 100 101 102, on right: 93 95
call (125)
    on left: 103, on right: 54 55 82 161
args_opt (126)
    on left: 104 105, on right: 103
more_args_opt (127)
    on left: 106 107, on right: 91
args (128)
    on left: 108 109, on right: 96 97 98 99 100 101 102 104 106 108
    164
assign (129)
    on left: 110, on right: 80
lvalue (130)
    on left: 111 112 113 114 115, on right: 55 56 110 155 156
expr (131)
    on left: 116 117, on right: 14 15 18 47 49 66 77 84 85 87 108 109
    110 112 113 114 115 145 146 147 148 163 165 166
condExprs_opt (132)
    on left: 118 119, on right: 117
condExprs (133)
    on left: 120 121, on right: 118 120
condExpr (134)
    on left: 122 123, on right: 116 120 121 122
logOrExpr (135)
    on left: 124 125, on right: 122 123 124
logAndExpr (136)
    on left: 126 127, on right: 124 125 126
bitOrExpr (137)
    on left: 128 129, on right: 126 127 128
bitXorExpr (138)
    on left: 130 131, on right: 128 129 130
bitAndExpr (139)
    on left: 132 133, on right: 130 131 132
equalExpr (140)
    on left: 134 135, on right: 132 133 134
inequalExpr (141)
    on left: 136 137, on right: 134 135 136
shiftExpr (142)
    on left: 138 139, on right: 136 137 138
addExpr (143)
    on left: 140 141, on right: 138 139 140
prodExpr (144)
    on left: 142 143, on right: 140 141 142
unaryExpr (145)
    on left: 144 145 146 147 148 149 150 151, on right: 142 143
floatExpr (146)
    on left: 152, on right: 151
fixedExpr (147)
    on left: 153 154, on right: 144 149 150 152
atomExpr (148)
    on left: 155 156 157 158 159 160 161 162 163, on right: 153 154
    156
builtinExpr (149)
    on left: 164 165 166, on right: 162
equalOp (150)
    on left: 167 168, on right: 134
inequalOp (151)
    on left: 169 170 171 172, on right: 136
shiftOp (152)
    on left: 173 174, on right: 138
addOp (153)
    on left: 175 176, on right: 140
exprOp (154)
    on left: 177, on right: 145
logOp (155)
    on left: 178, on right: 146
sqrtOp (156)
    on left: 179, on right: 147
floorOp (157)
    on left: 180, on right: 148
prodOp (158)
    on left: 181 182 183, on right: 142
unaryOp (159)
    on left: 184 185 186 187, on right: 144


state 0

    0 $accept: . start $end

    BOOLEAN   shift, and go to state 1
    FLOAT     shift, and go to state 2
    DOUBLE    shift, and go to state 3
    SIGNED    shift, and go to state 4
    UNSIGNED  shift, and go to state 5

    ID_       reduce using rule 9 (type_opt)
    $default  reduce using rule 3 (operators_opt)

    start          go to state 6
    operators_opt  go to state 7
    operators      go to state 8
    operator       go to state 9
    type_opt       go to state 10
    type           go to state 11
    sizedType      go to state 12


state 1

   10 type: BOOLEAN .
   13     | BOOLEAN . arraySize

    '['  shift, and go to state 13

    $default  reduce using rule 10 (type)

    arraySize  go to state 14


state 2

   11 type: FLOAT .

    $default  reduce using rule 11 (type)


state 3

   12 type: DOUBLE .

    $default  reduce using rule 12 (type)


state 4

   16 sizedType: SIGNED .

    $default  reduce using rule 16 (sizedType)


state 5

   17 sizedType: UNSIGNED .

    $default  reduce using rule 17 (sizedType)


state 6

    0 $accept: start . $end

    $end  shift, and go to state 15


state 7

    1 start: operators_opt .

    $default  reduce using rule 1 (start)


state 8

    2 operators_opt: operators .
    4 operators: operators . operator

    BOOLEAN   shift, and go to state 1
    FLOAT     shift, and go to state 2
    DOUBLE    shift, and go to state 3
    SIGNED    shift, and go to state 4
    UNSIGNED  shift, and go to state 5

    ID_       reduce using rule 9 (type_opt)
    $default  reduce using rule 2 (operators_opt)

    operator   go to state 16
    type_opt   go to state 10
    type       go to state 11
    sizedType  go to state 12


state 9

    5 operators: operator .

    $default  reduce using rule 5 (operators)


state 10

    7 operator: type_opt . opSignature @1 operatorBody exception_opt

    ID_  shift, and go to state 17

    opSignature  go to state 18


state 11

    8 type_opt: type .

    $default  reduce using rule 8 (type_opt)


state 12

   14 type: sizedType . '[' expr ']'
   15     | sizedType . arraySize '[' expr ']'

    '['  shift, and go to state 19

    arraySize  go to state 20


state 13

   18 arraySize: '[' . expr ']'

    BITSOF   shift, and go to state 21
    CAT      shift, and go to state 22
    FALSE    shift, and go to state 23
    ID_      shift, and go to state 24
    NUM      shift, and go to state 25
    NUMDBL   shift, and go to state 26
    TRUE     shift, and go to state 27
    '('      shift, and go to state 28
    WIDTHOF  shift, and go to state 29
    '{'      shift, and go to state 30
    '-'      shift, and go to state 31
    '+'      shift, and go to state 32
    '~'      shift, and go to state 33
    '!'      shift, and go to state 34
    EXP      shift, and go to state 35
    LOG      shift, and go to state 36
    SQRT     shift, and go to state 37
    FLOOR    shift, and go to state 38

    call         go to state 39
    lvalue       go to state 40
    expr         go to state 41
    condExpr     go to state 42
    logOrExpr    go to state 43
    logAndExpr   go to state 44
    bitOrExpr    go to state 45
    bitXorExpr   go to state 46
    bitAndExpr   go to state 47
    equalExpr    go to state 48
    inequalExpr  go to state 49
    shiftExpr    go to state 50
    addExpr      go to state 51
    prodExpr     go to state 52
    unaryExpr    go to state 53
    floatExpr    go to state 54
    fixedExpr    go to state 55
    atomExpr     go to state 56
    builtinExpr  go to state 57
    exprOp       go to state 58
    logOp        go to state 59
    sqrtOp       go to state 60
    floorOp      go to state 61
    unaryOp      go to state 62


state 14

   13 type: BOOLEAN arraySize .

    $default  reduce using rule 13 (type)


state 15

    0 $accept: start $end .

    $default  accept


state 16

    4 operators: operators operator .

    $default  reduce using rule 4 (operators)


state 17

   19 opSignature: ID_ . '(' ioDecls_opt ')'

    '('  shift, and go to state 63


state 18

    7 operator: type_opt opSignature . @1 operatorBody exception_opt

    $default  reduce using rule 6 (@1)

    @1  go to state 64


state 19

   14 type: sizedType '[' . expr ']'
   18 arraySize: '[' . expr ']'

    BITSOF   shift, and go to state 21
    CAT      shift, and go to state 22
    FALSE    shift, and go to state 23
    ID_      shift, and go to state 24
    NUM      shift, and go to state 25
    NUMDBL   shift, and go to state 26
    TRUE     shift, and go to state 27
    '('      shift, and go to state 28
    WIDTHOF  shift, and go to state 29
    '{'      shift, and go to state 30
    '-'      shift, and go to state 31
    '+'      shift, and go to state 32
    '~'      shift, and go to state 33
    '!'      shift, and go to state 34
    EXP      shift, and go to state 35
    LOG      shift, and go to state 36
    SQRT     shift, and go to state 37
    FLOOR    shift, and go to state 38

    call         go to state 39
    lvalue       go to state 40
    expr         go to state 65
    condExpr     go to state 42
    logOrExpr    go to state 43
    logAndExpr   go to state 44
    bitOrExpr    go to state 45
    bitXorExpr   go to state 46
    bitAndExpr   go to state 47
    equalExpr    go to state 48
    inequalExpr  go to state 49
    shiftExpr    go to state 50
    addExpr      go to state 51
    prodExpr     go to state 52
    unaryExpr    go to state 53
    floatExpr    go to state 54
    fixedExpr    go to state 55
    atomExpr     go to state 56
    builtinExpr  go to state 57
    exprOp       go to state 58
    logOp        go to state 59
    sqrtOp       go to state 60
    floorOp      go to state 61
    unaryOp      go to state 62


state 20

   15 type: sizedType arraySize . '[' expr ']'

    '['  shift, and go to state 66


state 21

  166 builtinExpr: BITSOF . '(' expr ')'

    '('  shift, and go to state 67


state 22

  164 builtinExpr: CAT . '(' args ')'

    '('  shift, and go to state 68


state 23

  160 atomExpr: FALSE .

    $default  reduce using rule 160 (atomExpr)


state 24

  103 call: ID_ . '(' args_opt ')'
  111 lvalue: ID_ .
  112       | ID_ . '[' expr ']'
  113       | ID_ . '[' expr ':' expr ']'
  114       | ID_ . '[' expr ']' '[' expr ']'
  115       | ID_ . '[' expr ']' '[' expr ':' expr ']'

    '('  shift, and go to state 69
    '['  shift, and go to state 70

    $default  reduce using rule 111 (lvalue)


state 25

  157 atomExpr: NUM .

    $default  reduce using rule 157 (atomExpr)


state 26

  158 atomExpr: NUMDBL .

    $default  reduce using rule 158 (atomExpr)


state 27

  159 atomExpr: TRUE .

    $default  reduce using rule 159 (atomExpr)


state 28

  149 unaryExpr: '(' . type ')' fixedExpr
  150          | '(' . sizedType ')' fixedExpr
  163 atomExpr: '(' . expr ')'

    BITSOF    shift, and go to state 21
    BOOLEAN   shift, and go to state 1
    FLOAT     shift, and go to state 2
    DOUBLE    shift, and go to state 3
    CAT       shift, and go to state 22
    FALSE     shift, and go to state 23
    ID_       shift, and go to state 24
    NUM       shift, and go to state 25
    NUMDBL    shift, and go to state 26
    SIGNED    shift, and go to state 4
    TRUE      shift, and go to state 27
    UNSIGNED  shift, and go to state 5
    '('       shift, and go to state 28
    WIDTHOF   shift, and go to state 29
    '{'       shift, and go to state 30
    '-'       shift, and go to state 31
    '+'       shift, and go to state 32
    '~'       shift, and go to state 33
    '!'       shift, and go to state 34
    EXP       shift, and go to state 35
    LOG       shift, and go to state 36
    SQRT      shift, and go to state 37
    FLOOR     shift, and go to state 38

    type         go to state 71
    sizedType    go to state 72
    call         go to state 39
    lvalue       go to state 40
    expr         go to state 73
    condExpr     go to state 42
    logOrExpr    go to state 43
    logAndExpr   go to state 44
    bitOrExpr    go to state 45
    bitXorExpr   go to state 46
    bitAndExpr   go to state 47
    equalExpr    go to state 48
    inequalExpr  go to state 49
    shiftExpr    go to state 50
    addExpr      go to state 51
    prodExpr     go to state 52
    unaryExpr    go to state 53
    floatExpr    go to state 54
    fixedExpr    go to state 55
    atomExpr     go to state 56
    builtinExpr  go to state 57
    exprOp       go to state 58
    logOp        go to state 59
    sqrtOp       go to state 60
    floorOp      go to state 61
    unaryOp      go to state 62


state 29

  165 builtinExpr: WIDTHOF . '(' expr ')'

    '('  shift, and go to state 74


state 30

  117 expr: '{' . condExprs_opt '}'

    BITSOF   shift, and go to state 21
    CAT      shift, and go to state 22
    FALSE    shift, and go to state 23
    ID_      shift, and go to state 24
    NUM      shift, and go to state 25
    NUMDBL   shift, and go to state 26
    TRUE     shift, and go to state 27
    '('      shift, and go to state 28
    WIDTHOF  shift, and go to state 29
    '-'      shift, and go to state 31
    '+'      shift, and go to state 32
    '~'      shift, and go to state 33
    '!'      shift, and go to state 34
    EXP      shift, and go to state 35
    LOG      shift, and go to state 36
    SQRT     shift, and go to state 37
    FLOOR    shift, and go to state 38

    $default  reduce using rule 119 (condExprs_opt)

    call           go to state 39
    lvalue         go to state 40
    condExprs_opt  go to state 75
    condExprs      go to state 76
    condExpr       go to state 77
    logOrExpr      go to state 43
    logAndExpr     go to state 44
    bitOrExpr      go to state 45
    bitXorExpr     go to state 46
    bitAndExpr     go to state 47
    equalExpr      go to state 48
    inequalExpr    go to state 49
    shiftExpr      go to state 50
    addExpr        go to state 51
    prodExpr       go to state 52
    unaryExpr      go to state 53
    floatExpr      go to state 54
    fixedExpr      go to state 55
    atomExpr       go to state 56
    builtinExpr    go to state 57
    exprOp         go to state 58
    logOp          go to state 59
    sqrtOp         go to state 60
    floorOp        go to state 61
    unaryOp        go to state 62


state 31

  185 unaryOp: '-' .

    $default  reduce using rule 185 (unaryOp)


state 32

  184 unaryOp: '+' .

    $default  reduce using rule 184 (unaryOp)


state 33

  187 unaryOp: '~' .

    $default  reduce using rule 187 (unaryOp)


state 34

  186 unaryOp: '!' .

    $default  reduce using rule 186 (unaryOp)


state 35

  177 exprOp: EXP .

    $default  reduce using rule 177 (exprOp)


state 36

  178 logOp: LOG .

    $default  reduce using rule 178 (logOp)


state 37

  179 sqrtOp: SQRT .

    $default  reduce using rule 179 (sqrtOp)


state 38

  180 floorOp: FLOOR .

    $default  reduce using rule 180 (floorOp)


state 39

  161 atomExpr: call .

    $default  reduce using rule 161 (atomExpr)


state 40

  155 atomExpr: lvalue .
  156         | lvalue . '@' atomExpr

    '@'  shift, and go to state 78

    $default  reduce using rule 155 (atomExpr)


state 41

   18 arraySize: '[' expr . ']'

    ']'  shift, and go to state 79


state 42

  116 expr: condExpr .

    $default  reduce using rule 116 (expr)


state 43

  122 condExpr: logOrExpr . '?' condExpr ':' condExpr
  123         | logOrExpr .
  124 logOrExpr: logOrExpr . LOGIC_OR logAndExpr

    LOGIC_OR  shift, and go to state 80
    '?'       shift, and go to state 81

    $default  reduce using rule 123 (condExpr)


state 44

  125 logOrExpr: logAndExpr .
  126 logAndExpr: logAndExpr . LOGIC_AND bitOrExpr

    LOGIC_AND  shift, and go to state 82

    $default  reduce using rule 125 (logOrExpr)


state 45

  127 logAndExpr: bitOrExpr .
  128 bitOrExpr: bitOrExpr . '|' bitXorExpr

    '|'  shift, and go to state 83

    $default  reduce using rule 127 (logAndExpr)


state 46

  129 bitOrExpr: bitXorExpr .
  130 bitXorExpr: bitXorExpr . '^' bitAndExpr

    '^'  shift, and go to state 84

    $default  reduce using rule 129 (bitOrExpr)


state 47

  131 bitXorExpr: bitAndExpr .
  132 bitAndExpr: bitAndExpr . '&' equalExpr

    '&'  shift, and go to state 85

    $default  reduce using rule 131 (bitXorExpr)


state 48

  133 bitAndExpr: equalExpr .
  134 equalExpr: equalExpr . equalOp inequalExpr

    EQUALS      shift, and go to state 86
    NOT_EQUALS  shift, and go to state 87

    $default  reduce using rule 133 (bitAndExpr)

    equalOp  go to state 88


state 49

  135 equalExpr: inequalExpr .
  136 inequalExpr: inequalExpr . inequalOp shiftExpr

    GTE  shift, and go to state 89
    LTE  shift, and go to state 90
    '<'  shift, and go to state 91
    '>'  shift, and go to state 92

    $default  reduce using rule 135 (equalExpr)

    inequalOp  go to state 93


state 50

  137 inequalExpr: shiftExpr .
  138 shiftExpr: shiftExpr . shiftOp addExpr

    LEFT_SHIFT   shift, and go to state 94
    RIGHT_SHIFT  shift, and go to state 95

    $default  reduce using rule 137 (inequalExpr)

    shiftOp  go to state 96


state 51

  139 shiftExpr: addExpr .
  140 addExpr: addExpr . addOp prodExpr

    '-'  shift, and go to state 97
    '+'  shift, and go to state 98

    $default  reduce using rule 139 (shiftExpr)

    addOp  go to state 99


state 52

  141 addExpr: prodExpr .
  142 prodExpr: prodExpr . prodOp unaryExpr

    '%'  shift, and go to state 100
    '*'  shift, and go to state 101
    '/'  shift, and go to state 102

    $default  reduce using rule 141 (addExpr)

    prodOp  go to state 103


state 53

  143 prodExpr: unaryExpr .

    $default  reduce using rule 143 (prodExpr)


state 54

  151 unaryExpr: floatExpr .

    $default  reduce using rule 151 (unaryExpr)


state 55

  152 floatExpr: fixedExpr .

    $default  reduce using rule 152 (floatExpr)


state 56

  153 fixedExpr: atomExpr . '.' atomExpr
  154          | atomExpr .

    '.'  shift, and go to state 104

    $default  reduce using rule 154 (fixedExpr)


state 57

  162 atomExpr: builtinExpr .

    $default  reduce using rule 162 (atomExpr)


state 58

  145 unaryExpr: exprOp . '(' expr ')'

    '('  shift, and go to state 105


state 59

  146 unaryExpr: logOp . '(' expr ')'

    '('  shift, and go to state 106


state 60

  147 unaryExpr: sqrtOp . '(' expr ')'

    '('  shift, and go to state 107


state 61

  148 unaryExpr: floorOp . '(' expr ')'

    '('  shift, and go to state 108


state 62

  144 unaryExpr: unaryOp . fixedExpr

    BITSOF   shift, and go to state 21
    CAT      shift, and go to state 22
    FALSE    shift, and go to state 23
    ID_      shift, and go to state 24
    NUM      shift, and go to state 25
    NUMDBL   shift, and go to state 26
    TRUE     shift, and go to state 27
    '('      shift, and go to state 109
    WIDTHOF  shift, and go to state 29

    call         go to state 39
    lvalue       go to state 40
    fixedExpr    go to state 110
    atomExpr     go to state 56
    builtinExpr  go to state 57


state 63

   19 opSignature: ID_ '(' . ioDecls_opt ')'

    INPUT   shift, and go to state 111
    OUTPUT  shift, and go to state 112
    PARAM   shift, and go to state 113

    $default  reduce using rule 21 (ioDecls_opt)

    ioDecls_opt  go to state 114
    ioDecls      go to state 115
    ioDecl       go to state 116
    ioKind       go to state 117


state 64

    7 operator: type_opt opSignature @1 . operatorBody exception_opt

    '{'  shift, and go to state 118

    operatorBody  go to state 119


state 65

   14 type: sizedType '[' expr . ']'
   18 arraySize: '[' expr . ']'

    ']'  shift, and go to state 120


state 66

   15 type: sizedType arraySize '[' . expr ']'

    BITSOF   shift, and go to state 21
    CAT      shift, and go to state 22
    FALSE    shift, and go to state 23
    ID_      shift, and go to state 24
    NUM      shift, and go to state 25
    NUMDBL   shift, and go to state 26
    TRUE     shift, and go to state 27
    '('      shift, and go to state 28
    WIDTHOF  shift, and go to state 29
    '{'      shift, and go to state 30
    '-'      shift, and go to state 31
    '+'      shift, and go to state 32
    '~'      shift, and go to state 33
    '!'      shift, and go to state 34
    EXP      shift, and go to state 35
    LOG      shift, and go to state 36
    SQRT     shift, and go to state 37
    FLOOR    shift, and go to state 38

    call         go to state 39
    lvalue       go to state 40
    expr         go to state 121
    condExpr     go to state 42
    logOrExpr    go to state 43
    logAndExpr   go to state 44
    bitOrExpr    go to state 45
    bitXorExpr   go to state 46
    bitAndExpr   go to state 47
    equalExpr    go to state 48
    inequalExpr  go to state 49
    shiftExpr    go to state 50
    addExpr      go to state 51
    prodExpr     go to state 52
    unaryExpr    go to state 53
    floatExpr    go to state 54
    fixedExpr    go to state 55
    atomExpr     go to state 56
    builtinExpr  go to state 57
    exprOp       go to state 58
    logOp        go to state 59
    sqrtOp       go to state 60
    floorOp      go to state 61
    unaryOp      go to state 62


state 67

  166 builtinExpr: BITSOF '(' . expr ')'

    BITSOF   shift, and go to state 21
    CAT      shift, and go to state 22
    FALSE    shift, and go to state 23
    ID_      shift, and go to state 24
    NUM      shift, and go to state 25
    NUMDBL   shift, and go to state 26
    TRUE     shift, and go to state 27
    '('      shift, and go to state 28
    WIDTHOF  shift, and go to state 29
    '{'      shift, and go to state 30
    '-'      shift, and go to state 31
    '+'      shift, and go to state 32
    '~'      shift, and go to state 33
    '!'      shift, and go to state 34
    EXP      shift, and go to state 35
    LOG      shift, and go to state 36
    SQRT     shift, and go to state 37
    FLOOR    shift, and go to state 38

    call         go to state 39
    lvalue       go to state 40
    expr         go to state 122
    condExpr     go to state 42
    logOrExpr    go to state 43
    logAndExpr   go to state 44
    bitOrExpr    go to state 45
    bitXorExpr   go to state 46
    bitAndExpr   go to state 47
    equalExpr    go to state 48
    inequalExpr  go to state 49
    shiftExpr    go to state 50
    addExpr      go to state 51
    prodExpr     go to state 52
    unaryExpr    go to state 53
    floatExpr    go to state 54
    fixedExpr    go to state 55
    atomExpr     go to state 56
    builtinExpr  go to state 57
    exprOp       go to state 58
    logOp        go to state 59
    sqrtOp       go to state 60
    floorOp      go to state 61
    unaryOp      go to state 62


state 68

  164 builtinExpr: CAT '(' . args ')'
